# everybody-codes

./: .gitignore  Cargo.toml  README.md  cliff.toml  day.sh  package.json  project-words.txt
.github/: settings.yml
.github/workflows/: ci.yml  graduate-release.yml  lint-commits.yml  machete.yml  publish-crate-after-release.yml  release.yml  rust.yml
crates/everybody-codes-2025/: Cargo.toml
crates/everybody-codes-2025/src/: lib.rs  shared.rs
crates/everybody-codes-2025/src/shared/: day.rs  quest.rs  solution.rs  tree.rs
crates/everybody-codes-2025/src/template/: xx.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  quest.rs  solution.rs  tree.rs
crates/shared/src/grids/: grid.rs  infinite_grid.rs
crates/shared/src/template/: xx.rs
