[package]
name = "everybody-codes-2025"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true

[features]
default = []

[dependencies]
pretty_assertions = "1.4.1"
shared = { path = "../shared" }

[dev-dependencies]

[lints]
workspace = true
